[package]
name = "hello_grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "4.3.2"
plotters = "0.3.3"
rand = "0.8.4"
rand_chacha = "0.3.1"
slotmap = "1.0.6"
indexmap = "2.1.0"
ndarray = "0.15.6"

